# realtime-crypto-ml-system

./: .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  Makefile  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
dashboards/: candles.json
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators-cm.yaml  backfill-technical-indicators.yaml  candles-historical-cj.yaml  kustomization.yaml  technical-indicators-historical-cj.yaml  trades-historical-cj.yaml
deployments/dev/backfill-technical-indicators-one-time/: backfill-technical-indicators-one-time.yaml
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: create_cluster.sh  install_kafka.sh  install_metrics_server.sh  install_mlflow.sh  install_risingwave.sh  kind-with-portmapping.yaml  setup_mlflow_db.sh
deployments/dev/kind/manifests/: kafka-ui-all-in-one.yaml  metrics-server.yaml  mlflow-db-init.yaml  mlflow-values.yaml  risingwave-values.yaml
deployments/dev/prediction-generator/: kustomization.yaml  prediction-generator-cm.yaml  prediction-generator-dp.yaml
deployments/dev/technical-indicators/: technical-indicators.yaml
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/dev/trades/: trades.yaml
deployments/dev/training-pipeline/: kustomization.yaml  training-pipeline-cj.yaml  training-pipeline-cm.yaml
deployments/dev/training-pipeline-one-job/: kustomization.yaml  training-pipeline-oj.yaml
deployments/prod/candles/: candles.yaml
deployments/prod/digitalocean/: create_cluster.sh  install_kafka.sh
deployments/prod/digitalocean/manifests/: kafka-c6c8.yaml  kafka-ui-all-in-one.yaml
deployments/prod/trades/: trades.yaml
docker/: Dockerfile.base  candles.Dockerfile  prediction-generator.Dockerfile  technical-indicators.Dockerfile  technical_indicators.Dockerfile  trades.Dockerfile  training-pipeline.Dockerfile
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml
services/candles/src/candles/: config.py  main.py
services/predictor/: pyproject.toml  query.sql
services/predictor/src/predictor/: config.py  data_validation.py  model_registry.py  models.py  predict.py  train.py
services/technical-indicators/: pyproject.toml  query.sql  settings.env
services/technical-indicators/src/technical_indicators/: main.py  table.py
services/technical_indicators/src/technical_indicators/: config.py  indicators.py  main.py  py.typed
services/trades/: pyproject.toml
services/trades/src/trades/: config.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  trade.py
