[project]
name = "crypto-predictor-system"
version = "0.1.0"
description = """
    A machine learning system that predicts crypto
    prices based on past prices and the latest news.
    """
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["services/trades"]
