[project]
name = "crypto-predictor-system"
version = "0.1.0"
description = """
    A machine learning system that predicts crypto
    prices based on past prices and the latest news.
    """
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-core>=2.27.2",
    "pydantic-settings>=2.8.1",
    "quixstreams>=3.13.1",
    "websocket-client>=1.8.0",
    "trades"
]

[tool.uv.workspace]
members = ["services/trades"]

[tool.uv.sources]
trades = { workspace = true }
