[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "risingwave-py>=0.0.2",
    "psycopg2-binary>=2.9.9",
    "numpy>=1.26.0",
    "loguru>=0.7.3",
    "mlflow>=3.1.1",
    "scikit-learn>=1.7.0",
    "optuna>=4.4.0",
    "pydantic-settings>=2.9.1",
]

[project.optional-dependencies]
# Heavy training/analysis dependencies - only for training-pipeline
training = [
    "great-expectations>=0.18.0",
    "lazypredict>=0.2.16",
    "ydata-profiling>=4.16.1",
    "setuptools>=69.0.0",
]

# Development dependencies with Jupyter ecosystem
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
