[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton J", email = "antonjavelosa@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "ta-lib>=0.6.3",
    "loguru>=0.7.3",
    "quixstreams>=3.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
