[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton J", email = "antonjavelosa@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
talib = [
    "ta-lib>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
