[project]
name = "trades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton J", email = "antonjavelosa@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "quixstreams>=3.13.1",
    "websocket-client>=1.8.0",
    "loguru>=0.7.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
